# cheek

./: .bumpversion.cfg  LICENSE.rst  README.rst  setup.cfg
docs/: Scripting Reference - Audacity Manual.html  commands.json  commands.txt
scripts/: extract_commands.py
src/cheek/: cli.py  commands.py
src/cheek/extract/: __main__.py  arg.py  command.py
tests/cli/: test_command_kwargs.py  test_field_info_to_click_type.py  test_field_info_to_python_type.py
