[metadata]
name = cheek
version = attr: cheek.version.__version__
description = Python package for the Audacity scripting interface
long_description = file: README.rst, LICENSE.rst
long_description_content_type = text/x-rst
url = https://github.com/abingham/cheek
author = Sixty North AS
author_email: austin.bingham@gmail.com
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Information Technology
    License :: MIT
    Programming Language :: Python :: 3.11

[options]
zip_safe = True
include_package_data = False
package_dir =
    =src
packages = find:
install_requires =

[options.extras_require]
dev = bumpversion ; build ; twine ; check-wheel-contents ; flake8 ; black
doc = sphinx ; sphinx_rtd_theme ; better_apidoc
test = pytest ; tox ; hypothesis


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cheek = cheek.cli:cli
